[package]
name = "Druid-7guis"
version = "0.1.0"
authors = ["MrGibus <arcane2.0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# This section is needed to force name to snake_case
[[bin]]
name = "druid_7guis"
path = "src/main.rs"

[dependencies]
druid = {version = "0.6.0", features= ["im"]}
